--- a/library_project/library_app/templates/library_app/borrow_bookcopy_search_user.html
+++ b/library_project/library_app/templates/library_app/borrow_bookcopy_search_user.html
@@ -66,11 +66,9 @@
                         </td>
 
                         <td>
-                        <!-- ListView nie obsługuje post -->
                             {% if have_borrows_with_exceeded_receive_date == False and user_profile_obj.can_borrow == True %}
-                                <form class="form-inline" action="{% url 'library_app:borrow_create_search_bookcopy' %}" method="get">
-                                    <input type="hidden" name="user_id" value="{{ user_profile_obj.user.id }}">
-                                    <button type="submit" class="btn btn-primary btn-sm">Dalej</button>
+                                <form class="form-inline" action="{% url 'library_app:borrow_create_search_bookcopy' %}">
+                                    <button id="next" type="submit" class="btn btn-primary btn-sm" onclick="save_user_id_in_session({{user_profile_obj.user.id}})">Dalej</button>
                                 </form>
                             {% endif %}
                         </td>
