--- a/library_project/library_app/templates/library_app/book_detail.html
+++ b/library_project/library_app/templates/library_app/book_detail.html
@@ -37,7 +37,7 @@
 
         
         <div class="book_list_back_link button">
-            <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+            <a href="javascript:history.back()"><input type="button" class="btn btn-dark" value="Powrót"></a>
         </div>
 
         {% if user.is_authenticated and user.is_superuser %}
