--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -66,13 +66,14 @@
                             aria-expanded="false">
                             Biblioteka
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="ManageLibrary">
+                        <div class="dropdown-menu multi-leve" aria-labelledby="ManageLibrary">
                             <a class="dropdown-item" href="{% url 'library_app:book_create' %}">Dodaj książkę</a>
                             <a class="dropdown-item" href="{% url 'library_app:bookcopy_create' %}">Dodaj egzemplarz książki</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="{% url 'library_app:author_create' %}">Dodaj autora</a>
-                            <a class="dropdown-item" href="{% url 'library_app:publishinghouse_create' %}">Dodaj wydawnictwo</a>
-                            <a class="dropdown-item" href="{% url 'library_app:category_create' %}">Dodaj kategorię</a>
+                            
+                            <a class="dropdown-item" href="{% url 'library_app:authors_list' %}">Autorzy</a>
+                            <a class="dropdown-item" href="{% url 'library_app:publishinghouse_create' %}">Wydawnictwa</a>
+                            <a class="dropdown-item" href="{% url 'library_app:category_create' %}">Kategorie książek</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:users_list' %}">Zarządzaj użytkownikami</a>
                             <div class="dropdown-divider"></div>
