--- a/library_project/library_app/templates/library_app/category_confirm_delete.html
+++ b/library_project/library_app/templates/library_app/category_confirm_delete.html
@@ -1,13 +1,27 @@
 {% extends "base.html" %}
 
 {% block body_block %}
+{% load custom_tags %}
+
 <div class="container">
-    <h2>Usunąć kategorię {{category.category_name}}?</h2>
-    <h6>Ta akcja usunie także wszystkie książki danej kategorii</h6>
-    <form method="POST">
-        {% csrf_token %}
-        <input type="submit" class="btn btn-danger" value="Usuń">
-        <a class="btn btn-primary" href="{% url 'library_app:category_detail' pk=category.pk %}">Powrót</a>
-    </form>
+{% get_categories_book_count category as categories_book_count %}
+    <h2>Usunąć kategorie?</h2>
+    <h4>Szczegóły</h4>
+    <ul>
+        <li class="name"><b>Nazwa: </b>{{category.category_name}}</li>
+        <li class="books_count"><b>Liczba książek w tej kategorii: </b> {{categories_book_count}}</li>
+    </ul>
+
+    <br>
+    {% if categories_book_count == 0 %}
+        <form method="POST">
+            {% csrf_token %}
+            <input type="submit" class="btn btn-danger" value="Usuń">
+            <a class="btn btn-dark" href="javascript:history.back()">Powrót</a>
+        </form>
+    {% else %}
+        <h6>Nie można usunąć autora jeśli ma przypisane książki</h6>
+        <a class="btn btn-dark" href="javascript:history.back()">Powrót</a>
+    {% endif %}
 </div>
 {% endblock %}
