--- a/library_project/library_app/templates/library_app/publishinghouse_detail.html
+++ b/library_project/library_app/templates/library_app/publishinghouse_detail.html
@@ -6,12 +6,10 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div id="navbarNavDropdown" class="navbar-collapse collapse">
         <ul class="navbar-nav mr-auto">
-            <a class="btn" data-toggle="collapse" href="#collapse1" role="button" aria-expanded="false" aria-controls="collapse"
-                onclick="scrollToIdElem('collapse1')">
+            <a class="btn" data-toggle="collapse" href="#collapse1" role="button" aria-expanded="false" aria-controls="collapse">
                 Pokaż szczegóły
             </a>
-            <a class="btn" data-toggle="collapse" href="#collapse2" role="button" aria-expanded="false" aria-controls="collapse"
-                onclick="scrollToIdElem('collapse2')">
+            <a class="btn" data-toggle="collapse" href="#collapse2" role="button" aria-expanded="false" aria-controls="collapse">
                 Pokaż książki wydawnictwa
             </a>
         </ul>
@@ -31,19 +29,9 @@
             </ul>
             
             
-            <div class="book_list_back_link button">
-                <a href="{% url 'library_app:book_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
+            <div class="PH_list_back_link button">
+                <a href="{% url 'library_app:publishinghouses_list' %}"><input type="button" class="btn btn-dark" value="Powrót"></a>
             </div>
-
-            {% if user.is_authenticated and user.is_superuser %}
-                <div class="update_book_link button">
-                    <a href="{% url 'library_app:publishinghouse_update' pk=publishinghouse.pk %}"><input type="submit" class="btn btn-warning" value="Edytuj wydawnictwo"></a>
-                </div>
-
-                <div class="delete_book_link button">
-                    <a href="{% url 'library_app:publishinghouse_delete' pk=publishinghouse.pk %}"><input type="submit" class="btn btn-danger" value="Usuń wydawnictwo"></a>
-                </div>
-            {% endif %}
         </div>
 
         
