--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -72,8 +72,8 @@
                             <div class="dropdown-divider"></div>
                             
                             <a class="dropdown-item" href="{% url 'library_app:authors_list' %}">Autorzy</a>
-                            <a class="dropdown-item" href="{% url 'library_app:publishinghouse_create' %}">Wydawnictwa</a>
-                            <a class="dropdown-item" href="{% url 'library_app:category_create' %}">Kategorie książek</a>
+                            <a class="dropdown-item" href="{% url 'library_app:publishinghouses_list' %}">Wydawnictwa</a>
+                            <a class="dropdown-item" href="{% url 'library_app:categories_list' %}">Kategorie książek</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:users_list' %}">Zarządzaj użytkownikami</a>
                             <div class="dropdown-divider"></div>
