add "my profile" navbar item when librarian is logged

--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -81,6 +81,23 @@
                         </div>
                     </li>
 
+                    <li class="nav-item dropdown active">
+                        <a class="nav-link dropdown-toggle" href="#" id="UserSettings" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Twój profil
+                        </a>
+                        
+                        <div class="dropdown-menu" aria-labelledby="UserSettings">
+                            <a class="dropdown-item" href="{% url 'library_app:my_profile' %}">Wyświetl profil</a>
+                            <a class="dropdown-item" href="{% url 'library_app:my_statistics' %}">Twoje statystyki</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{% url 'accounts:password_reset' %}">Zresetuj hasło</a>
+                            
+                            {% get_user_profile user as userProfileObj %}
+                            <a class="dropdown-item" href="{% url 'library_app:my_profile_update' pk=userProfileObj.id %}">Edytuj dane kontaktowe</a>
+                        </div>
+                    </li>
+                    
                     <li class="nav-item active">
                         <a class="nav-link">Bibliotekarz {{user.first_name}} {{user.last_name}}</a>
                     </li>
