--- a/library_project/library_app/templates/library_app/book_list.html
+++ b/library_project/library_app/templates/library_app/book_list.html
@@ -45,6 +45,9 @@
                     <tr>
                         <td>
                             <a href="{% url 'library_app:book_detail' pk=book.pk %}"><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20"></a>
+                            {% if user.is_superuser %}
+                                <a href="{% url 'library_app:book_update' pk=book.pk %}"><img src="{% static 'website_icons/edit_ico.png' %}" alt="Usuń" width="20" height="20"></a>
+                            {% endif %}
                             {% if user.is_superuser and book.bookcopies.count == 0 %}
                                 <a href="{% url 'library_app:book_delete' pk=book.pk %}"><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń" width="20" height="20"></a> 
                             {% endif %}
@@ -101,7 +104,8 @@
         <p><b>Legenda:</b></p>
         <p><img src="{% static 'website_icons/info_ico.png' %}" alt="Szczegóły" width="20" height="20">Szczegóły książki</p>
         {% if user.is_superuser %}
-            <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń książkę" width="20" height="20">Usuń książkę (gdy nie ma jej egzemplarzy)</p>
+            <p><img src="{% static 'website_icons/edit_ico.png' %}" alt="Edytuj ksiazke" width="20" height="20">Edytuj książkę</p>
+            <p><img src="{% static 'website_icons/del_ico.png' %}" alt="Usuń książkę" width="20" height="20">Usuń książkę (gdy nie posiada egzemplarzy)</p>
         {% endif %}
     </div>
 
