--- a/library_project/templates/base.html
+++ b/library_project/templates/base.html
@@ -68,12 +68,12 @@
                         </a>
                         <div class="dropdown-menu multi-leve" aria-labelledby="ManageLibrary">
                             <a class="dropdown-item" href="{% url 'library_app:book_create' %}">Dodaj książkę</a>
-                            <a class="dropdown-item" href="{% url 'library_app:bookcopy_create' %}">Dodaj egzemplarz książki</a>
+                            <a class="dropdown-item" href="{% url 'library_app:bookcopy_create' %}">Dodaj egzemplarz</a>
                             <div class="dropdown-divider"></div>
                             
                             <a class="dropdown-item" href="{% url 'library_app:authors_list' %}">Autorzy</a>
                             <a class="dropdown-item" href="{% url 'library_app:publishinghouses_list' %}">Wydawnictwa</a>
-                            <a class="dropdown-item" href="{% url 'library_app:categories_list' %}">Kategorie książek</a>
+                            <a class="dropdown-item" href="{% url 'library_app:categories_list' %}">Kategorie</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{% url 'library_app:users_list' %}">Zarządzaj użytkownikami</a>
                             <div class="dropdown-divider"></div>
